hphp/hack/test/typecheck/type_structure/typing_type_structure1.php.like_types.exp
File "typing_type_structure1.php", line 18, characters 5-23:
  ~HH\TypeStructureKind
File "typing_type_structure1.php", line 19, characters 5-28:
  ~?classname<~Vector<~int>>
File "typing_type_structure1.php", line 20, characters 5-32:
  ~?varray<_>
File "typing_type_structure1.php", line 21, characters 5-28:
  ~?classname<~C<~string>>
File "typing_type_structure1.php", line 22, characters 5-32:
  ~?varray<_>
File "typing_type_structure1.php", line 23, characters 5-29:
  ~?varray<_>
File "typing_type_structure1.php", line 24, characters 5-44:
  err
File "typing_type_structure1.php", line 25, characters 5-30:
  ~?varray<_>
File "typing_type_structure1.php", line 26, characters 5-30:
  ~?darray<_, _>
File "typing_type_structure1.php", line 27, characters 5-28:
  ~?classname<~this as D>
File "typing_type_structure1.php", line 24, characters 13-31:
You are trying to access an element of this container but the container could be null.  (Typing[4063])
File "typestructure.hhi", line 60, characters 19-25:
This is what makes me believe it can be null
